in sync with public site

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -62,6 +63,9 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li>
+                        <a href="https://github.com/ChurchCRM/CRM/zipball/master" target="_blank">Download</a>
+                    </li>
+                    <li>
                         <a href="http://demo.churchcrm.io/" target="_blank">Demo</a>
                     </li>
                     <li>
@@ -97,8 +101,11 @@
                                 <a href="http://demo.churchcrm.io" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-desktop fa-fw"></i> <span class="network-name">View Demo</span></a>
                             </li>
                             <li>
-                                <a href="http://webchat.freenode.net/?randomnick=1&channels=ChurchCRM&prompt=1&uio=d4" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-comment fa-fw"></i> <span class="network-name">IRC</span></a>
+                                <a href="https://github.com/ChurchCRM/CRM/zipball/master" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="network-name">Download</span></a>
                             </li>
+                        <li>
+                            <a href="http://webchat.freenode.net/?randomnick=1&channels=ChurchCRM&prompt=1&uio=d4" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-comment fa-fw"></i> <span class="network-name">IRC</span></a>
+                        </li>                            
                         </ul>
                     </div>
                 </div>
@@ -273,13 +280,10 @@
                             <a href="https://github.com/ChurchCRM/CRM" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="http://demo.churchcrm.io" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-desktop fa-fw"></i> <span class="network-name">View Demo</span></a>
+                            <a href="http://webchat.freenode.net/?randomnick=1&channels=ChurchCRM&prompt=1&uio=d4" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-comment fa-fw"></i> <span class="network-name">IRC</span></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/ChurchWebCRM" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-						 <li>
-                            <a href="http://webchat.freenode.net/?randomnick=1&channels=ChurchCRM&prompt=1&uio=d4" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-comment fa-fw"></i> <span class="network-name">IRC</span></a>
                         </li>
                     </ul>
                 </div>
@@ -315,6 +319,10 @@
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#contact">Contact</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="https://github.com/ChurchCRM/CRM/zipball/master" target="_blank">Download</a>
                         </li>
                         <li>
                             <a href="http://docs.churchcrm.io/" target="_blank">Docs/Help</a>
