Fix 404 error for docker link

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Docker</h2>
                     <p class="lead">
-                        pull the <a href="https://registry.hub.docker.com/u/churchwebcrm/docker/" target="_blank"> docker registry image</a> using
+                        pull the <a href="https://hub.docker.com/r/churchwebcrm/churchcrm/" target="_blank"> docker registry image</a> using
                         <p>
-                            <code>docker pull churchwebcrm/docker</code>
+                            <code>docker pull churchwebcrm/churchcrm</code>
                         </p>
                         or visit <a href="https://github.com/ChurchCRM/Docker" target="_blank">Church Web CRM Docker GitHub repo</a>
                     </p>
